hphp/test/zend/good/ext/hash/tests/fnv1a64.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
extension_loaded('hash') or die ('Skip - hash extension not available');
}
