hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_getExtension_basic.php.skipif
<?php extension_loaded('dom') or die('skip - dom extension not loaded'); ?>